--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         data-sticky-shrink="false" data-sticky-class="not-dark" data-sticky-offset="full"
         data-sticky-offset-negative="100">
         <div id="header-wrap">
-          <div class="container" style="margin-top: 32px;">
+          <div class="container" style="margin-top: 0px; height: 107px;">
             <div class="header-row">
               <!-- Logo
 						============================================= -->
               <div id="logo"> <a href="index.html" class="standard-logo" data-dark-logo="LibraryLogo.png"><img
-                    src="LibraryLogo.png" alt="Canvas Logo" style="margin-top: -39px; height: 109px; width: 184px;"></a>
-                <a href="index.html" class="retina-logo" data-dark-logo="one-page/images/canvasone-dark@2x.png"><img
+                    src="LibraryLogo.png" alt="Canvas Logo" style="margin-top: 1px; height: 103px; width: 184px;"></a>
+                <a href="index.html" class="retina-logo" data-dark-logo="LibraryLogo.png"><img
                     src="one-page/images/canvasone@2x.png" alt="Canvas Logo"></a>
               </div>
               <!-- #logo end -->
@@ -98,7 +98,7 @@
                 <ul class="one-page-menu menu-container" data-easing="easeInOutExpo"
                   data-speed="1250" data-offset="65">
                   <li class="menu-item"> <a href="#" class="menu-link" data-href="#wrapper">
-                      <div>Home</div>
+                      <div style="height: 42px;">Home</div>
                     </a> </li>
                   <li class="menu-item"> <a href="#" class="menu-link" data-href="#section-about">
                       <div>About</div>
@@ -107,7 +107,8 @@
                       <div>Works</div>
                     </a> </li>
                   <li class="menu-item"> <a href="#" class="menu-link" data-href="#section-services">
-                      <div>Services</div>
+                      <div>Serv<img src="file:///C:/Users/Laguz/Desktop/%E5%A5%B3%E5%B7%AB%E4%BF%B1%E6%A8%82%E9%83%A8/huffysmall.png"
+                          alt="" style="width: 73px; height: 98px;">ices</div>
                     </a> </li>
                   <li class="menu-item"> <a href="#" class="menu-link" data-href="#section-blog">
                       <div>Blog</div>
