--- a/indffffex.html
+++ b/indffffex.html
@@ -203,11 +203,17 @@
                     <div class="container clearfix">
                       <div class="mx-auto center" style="max-width: 900px;">
                         <h2 class="mb-0 font-weight-light ls1"><img src="../../../Desktop/%E5%A5%B3%E5%B7%AB%E4%BF%B1%E6%A8%82%E9%83%A8/huffybig.png"
-                            alt=""></h2>
+                            alt="" style="width: 183px; height: 269px;"><img src="blue.png"
+                            alt="" style="width: 206px; height: 279px;"></h2>
                         <h2 class="mb-0 font-weight-light ls1">We enjoy working
                           on the Services &amp; Products we provide as much as
                           you need them. This help us in delivering your Goals
-                          easily. Browse through the wide range of services we
+                          easily. Browse through the wide range </h2>
+                        <h2 class="mb-0 font-weight-light ls1"><br>
+                        </h2>
+                        <h2 class="mb-0 font-weight-light ls1"><br>
+                        </h2>
+                        <h2 class="mb-0 font-weight-light ls1">of services we
                           provide.</h2>
                         <p><br>
                         </p>
