--- a/indffffex.html
+++ b/indffffex.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
   </head>
-  <body class="stretched side-push-panel" style="   background-color: #000000;">
+  <body class="stretched side-push-panel" style="    background-color: #000000;">
     <meta name="author" content="SemiColonWeb">
     <!-- Stylesheets
 	============================================= -->
@@ -165,7 +165,7 @@
             </div>
           </div>
           <div class="team">
-            <div class="team-image"> <img src="one-page/images/team/1.jpg" alt="John Doe">
+            <div class="team-image"> <img src="chract.jpg" alt="John Doe">
               <div class="bg-overlay">
                 <div class="bg-overlay-content align-items-end" data-hover-animate="fadeIn"
                   data-hover-speed="400" style="top: 0px; left: 0px; width: 474px; height: 589px;">
